Matomo-Mysql K8s/Motomo distributed install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  labels:
    name: matomo
spec:
  tls:
  - hosts:
    - pshung.tk
      secretName: pshungsecret
  ingressClassName: nginx
  rules:
  - host: pshung.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: matomo-app
            port: 
              number: 8080
